--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
                     hostel fees & fines for damages from accommodated students. In addition, it assigns the full-time
                     sub-wardens to the hostels.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold "
-                        onclick="location.href='login.html'">Register</button>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Sign in</button>
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold ">Register</button>
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href='login.html'">Sign in</button>
                 </div>
             </div>
             <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <img class="rounded-lg-3" src="img/1000_F_34928786_77eI3X1IZHEm3KEHvL8tQYBlt7Epm5Wk.jpg" alt="study girl" width="1020">
+                <img class="rounded-lg-3" src="img/657517bb25036fb7e67feb623187ef72.jpg" alt="study girl" width="420">
             </div>
         </div>
     </div>
