--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="col-md-3 text-end">
                 <button type="button" class="btn btn-outline-primary me-2"
                     onclick="location.href='login.html'">Login</button>
-                <button type="button" class="btn btn-primary">Sign-up</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='register.html'">Sign-up</button>
             </div>
         </header>
     </div>
@@ -36,8 +36,8 @@
     <div class="container my-5" style="color: white;">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-                <h1 class="display-4 fw-bold lh-1 text-body-white ">Common Conditions and Rules and Regulations for Residential Students</h1>
-                <p class="lead">Hostel facilities are provided for a limited number of students by the University. The
+                <h1 class="display-4 fw-bold lh-1 text-body-white "><u>Hostels for Students</u></h1>
+                <p style="color: black;">Hostel facilities are provided for a limited number of students by the University. The
                     University of Vavuniya has four hostels to offer for accommodation. Hostels are situated within the
                     University premises and outside rented houses. The total capacity of this hostel accommodation is
                     1000 students. The university provides 70 No of students’ accommodation at the rented houses. The
@@ -50,7 +50,7 @@
                     hostel fees & fines for damages from accommodated students. In addition, it assigns the full-time
                     sub-wardens to the hostels.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold ">Register</button>
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" onclick="location.href='register.html'">Register</button>
                     <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="location.href='login.html'">Sign in</button>
                 </div>
             </div>
